--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/Perodactyl/YAPL#readme",
   "dependencies": {
+    "colors": "^1.4.0",
     "fs": "0.0.1-security",
     "readline": "^1.3.0"
   }
